add new template view

--- a/book/Views/Home/About.cshtml
+++ b/book/Views/Home/About.cshtml
@@ -1,11 +1,11 @@
-﻿@model int
+﻿@model Product
 @{
     ViewData["Title"] = "About";
 }
 
 <div>
     <h1>About</h1>
-    <p>@Model</p>
+    <p>@Model.Price</p>
     
 </div>
 
